syntax = "proto3";

package auth;
option go_package = "backend/pb/auth";

import "google/protobuf/timestamp.proto";

// Service definition
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

// Common messages
message User {
  string id = 1;
  string email = 2;
  string role = 3; // student, faculty, admin
  string name = 4;
  google.protobuf.Timestamp created_at = 5;
  string student_id = 6; // optional
  string faculty_id = 7; // optional
  string department = 8; // optional
  string major = 9; // optional
  int32 year_level = 10; // optional
  bool is_active = 11;
}

// Request/Response messages
message LoginRequest {
  string identifier = 1; // email or student_id
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2; // JWT token
  User user = 3;
  string message = 4;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  string message = 3;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}